# dawarich-cleaner

./: .clinerules  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  run.py  schema.sql  wrangler.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: docker-publish.yml  pre-commit.yml  test.yml
app/: config.py  database.py  main.py  models.py
app/routes/: __init__.py  dashboard.py  review.py  scan.py
app/services/: __init__.py  dawarich.py  outlier_detector.py  scheduler.py
src/: database.py  dawarich_client.py  main.py  outlier_detector.py  templates.py  worker.py  worker_routes.py
src/templates/: base.html  dashboard.html  result.html  review.html
templates/: base.html  dashboard.html  error.html  result.html  review.html
tests/: conftest.py  generate_test_data.py  test_config.py  test_database.py  test_dawarich.py  test_gpx_integration.py  test_outlier_detector.py  test_routes.py  test_sample.gpx  test_scheduler.py
